[package]
name = "actix-redisactor"
version = "0.3.3"
authors = ["Hui Tang <duriantang@gmail.com>"]
edition = "2018"
description = "Actix Redis Actor"
license = "MIT"

[dependencies]
actix = "0.8.3"
backoff = "0.1.5"
derive_more = "0.15.0"
futures = "0.1.29"
log = "0.4.8"
redis-async = "0.5.2"
tokio-codec = "0.1.1"
tokio-io = "0.1.12"
tokio-tcp = "0.1.3"
