[package]
name = "actix-redisactor"
version = "0.4.1"
authors = [ "Hui Tang <duriantang@gmail.com>" ]
edition = "2018"
description = "Actix Redis Actor"
license = "MIT"

[dependencies]
actix = "0.9.0"
actix-utils = "1.0.6"
backoff = "0.1.6"
derive_more = "0.99.7"
futures = { version = "0.3.5", features = [ "compat" ] }
log = "0.4.8"
redis-async = "=0.6.2"
tokio = "0.2.21"
tokio-util = { version = "0.2.0", features = [ "full" ] }
